--- a/data/live_projects.json
+++ b/data/live_projects.json
@@ -1,7 +1,7 @@
 [
     {
         "name": "Doodle Live: Host Live Meetings", 
-        "intro": "Collaborate with unlimited users to share your ideas and take your teamwork to the Next Level. Work together anywhere, anytime!",
+        "intro": "Collaborate with unlimited users to share your ideas and take your teamwork to the Next Level. Work together anywhere, anytime!<br><br><strong># Second best project in a global voyage. Watch Chingu facilitators talking about our project in the <a href=\"\">Chingu Showcase Event</a>.</strong>",
         "showcase": "<iframe class=\"detail-vid\" width=\"375\" height=\"212\" src=\"https://www.youtube.com/embed/1lMAnxmsgKw\"><\/iframe>",
         "features": [
             "Host Meetings with unlimited users.",
@@ -44,7 +44,7 @@
     {
         "name": "Lyrics Extractor: Python Library", 
         "intro": "Get Lyrics for any songs by just passing in the song name (spelled or misspelled) in less than 2 seconds using this awesome Python Library.",
-        "showcase": "<img src=\"https://via.placeholder.com/375x212\" class=\"detail-img\" alt=\"\" \">",
+        "showcase": "<img src=\"../images/py_lib.png\" class=\"detail-img\" width=\"375\" height=\"212\" alt=\"\" \">",
         "features": [
             "Artist name is not required while passing in the song name.",
             "If there are more then one song fetched with the same title than the most popular song is chosen among all.",
