--- a/data/live_projects.json
+++ b/data/live_projects.json
@@ -61,7 +61,7 @@
     {
         "name": "GitHub Finder", 
         "intro": "The GitHub Finder web app fetches the user profiles & repos from GitHub API and displays it in a well-formatted manner.",
-        "showcase": "<img src=\"https://via.placeholder.com/375x212\" class=\"detail-img\" alt=\"\" \">",
+        "showcase": "<img src=\"../images/github_finder.gif\" class=\"detail-img\" alt=\"\" \">",
         "features": [
             "It searches for user profiles as you type but reduces unnecessary API calls using setTimeout() method. So API is only called when you have stopped typing your desired keyword.",
             "It fetches the 5 latest repos with stars, watchers, forks and other useful information to show the user's summary of GitHub.",
