Live projects section complete.

--- a/data/live_projects.json
+++ b/data/live_projects.json
@@ -1,7 +1,7 @@
 [
     {
         "name": "Doodle Live: Host Live Meetings", 
-        "intro": "Collaborate with unlimited users to share your ideas and take your teamwork to the Next Level. Work together anywhere, anytime!<br><br><strong># Second best project in a global voyage. Watch Chingu facilitators talking about our project in the <a href=\"\">Chingu Showcase Event</a>.</strong>",
+        "intro": "Collaborate with unlimited users to share your ideas and take your teamwork to the Next Level. Work together anywhere, anytime!<br><br><strong># Second best project in a global voyage. Watch Chingu facilitators talking about our project in the <a href=\"https://m.youtube.com/watch?v=mo9mFvHciMU&t=17m45s\" target=\"_blank\">Chingu Showcase Event</a>.</strong>",
         "showcase": "<iframe class=\"detail-vid\" width=\"375\" height=\"212\" src=\"https://www.youtube.com/embed/1lMAnxmsgKw\"><\/iframe>",
         "features": [
             "Host Meetings with unlimited users.",
