--- a/data/live_projects.json
+++ b/data/live_projects.json
@@ -2,7 +2,7 @@
   {
     "name": "Doodle Live: Host Live Meetings",
     "intro": "Collaborate with unlimited users to share your ideas and take your teamwork to the Next Level. Work together anywhere, anytime!<br><br><strong># Second best project in a global voyage. Watch Chingu facilitators talking about our project in the <a href=\"https://m.youtube.com/watch?v=mo9mFvHciMU&t=17m45s\" target=\"_blank\">Chingu Showcase Event</a>.</strong>",
-    "showcase": "<iframe class=\"detail-vid\" width=\"375\" height=\"212\" src=\"https://www.youtube.com/embed/1lMAnxmsgKw\"></iframe>",
+    "showcase": "<iframe class=\"detail-vid\" width=\"375\" height=\"212\" src=\"https://www.youtube.com/embed/1lMAnxmsgKw\" allowfullscreen></iframe>",
     "features": [
       "Host Meetings with unlimited users.",
       "Sketch & Share.",
@@ -22,7 +22,7 @@
   {
     "name": "Buddies: Your Personal Assistant",
     "intro": "A WhatsApp chatbot designed for the users with 20+ features by integrating several APIs, Libraries, and Datasets.",
-    "showcase": "<iframe class=\"detail-vid\" width=\"375\" height=\"212\" src=\"https://www.youtube.com/embed/iy4ubzKB9iE\"></iframe>",
+    "showcase": "<iframe class=\"detail-vid\" width=\"375\" height=\"212\" src=\"https://www.youtube.com/embed/iy4ubzKB9iE\" allowfullscreen></iframe>",
     "features": [
       "Get latest news every morning directly in your inbox.",
       "Users can set reminders and tasks so that they get reminded at their set Date and time.",
